# app/controllers/web_api/v1/products_controller.rb
@@ -1,4 +1,4 @@
-class WebApi::V1::ProductsController < ApplicationController
+class WebApi::V1::ProductsController < WebController
 
   def index
     run WebApi::Products::Operation::Index do |ctx, _params: {page: params[:page] || 1}, **|
@@ -7,5 +7,8 @@ class WebApi::V1::ProductsController < ApplicationController
   end
 
   def show
+    run WebApi::Products::Operation::Show do |ctx, _params: params[:id], **|
+      render json: ctx[:product]
+    end
   end
 end
