# config/routes.rb
@@ -10,13 +10,22 @@ Rails.application.routes.draw do
     namespace :v1 do
       post 'auth/login'
       post 'auth/signup'
-      resources :products, only: [:index, :show], defaults: { format: 'json' }
+      resources :products, only: [:index, :show]
+      resources :product_likes, only: [:create]
 
       resources :orders, only: [:index, :create] do 
         member do
           post 'add_products'
         end
       end
+    end
+  end
+
+  namespace :crm_api do
+    namespace :v1 do
+      resources :products, only: [:create]
+      patch "/orders/:order_id/cancel", to: "orders#cancel"
+      patch "/orders/:order_id/confirm", to: "orders#confirm"
     end
   end
 
