# swagger/web/swagger.yaml
@@ -70,7 +70,13 @@ paths:
       - Products
       security:
         - bearerAuth: []
-      parameters: []
+      parameters:
+        - in: query
+          name: page
+          description: page
+          schema:
+            type: number
+          required: true
       responses:
         '200':
           description: List of products
@@ -80,6 +86,52 @@ paths:
                 $ref: '#/components/schemas/ProductResponse'
         '401':
           description: Unauthorized
+  "/products/{productId}":
+    get:
+      summary: Show product Details
+      tags:
+      - Products
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: merchantId
+          schema:
+            type: string
+          required: true
+          description: Numeric ID of the product to get
+      responses:
+        '200':
+          description: List of products
+          content: 
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductResponse'
+        '401':
+          description: Unauthorized
+  "/product_likes":
+    post:
+      summary: Set a favorite product
+      tags:
+      - Products
+      security:
+        - bearerAuth: []
+      responses:
+        '201':
+          description: Order created successfully
+        '401':
+          description: Unauthorized
+        '400':
+          description: Bad request
+      requestBody:
+        content:
+          application/json:
+              schema:
+                $ref: '#/components/schemas/CreateProductLikeRequest'
+              examples: 
+                valid_order:
+                  summary: Valid order
+                  value: { "product_like": { "product_id": 1 } }
   "/orders":
     post:
       summary: Create a new order
@@ -192,12 +244,15 @@ components:
     Order:
       type: object
       properties:
-        date:
-          type: string
-          format: date
         cart:
-          type: object
-          $ref: '#/components/schemas/Cart'
+          type: array
+          items:
+            type: object
+            properties:
+              product_id:
+                type: number
+              quantity:
+                type: number
     CreateOrderRequest:
       type: object
       properties:
@@ -236,6 +291,14 @@ components:
           items:
             type: object
             $ref: '#/components/schemas/ProductData'
+    CreateProductLikeRequest:
+      type: object
+      properties:
+        product_like:
+          type: object
+          properties:
+            product_id:
+              type: number
 servers:
 - url: http://{defaultHost}
   variables:
